# qserv_web

./: CMakeLists.txt  Dockerfile  README.md  build-image.sh  default.conf  env.build.sh  ncsa_int.conf  publish-release.sh
nbproject/: configurations.xml  project.xml
nbproject/private/: configurations.xml  private.xml
www/: QservNCSAdev.html  QservPDAC.html  dashboard.html  index.html  main.js  test_fwk.html
www/js/: test_fwk.js  test_fwk_1.js
www/qserv/css/: IngestContributions.css  IngestStatus.css  IngestTransactions.css  ReplicationConfig.css  ReplicationConfigCatalogs.css  ReplicationController.css  StatusActiveChunksMap.css  StatusCatalogs.css  StatusHeatMap.css  StatusUserQueries.css  StatusWorkers.css
www/qserv/html/: StatusReplicationLevel.html
www/qserv/js/: IngestContributions.js  IngestStatus.js  IngestTransactions.js  QservMonitoringDashboard.js  QservNCSAdev.js  QservPDAC.js  QservWorkerQueries.js  QservWorkerSchedulers.js  ReplicationConfig.js  ReplicationConfigCatalogs.js  ReplicationController.js  ReplicationTools.js  StatusActiveChunksMap.js  StatusCatalogs.js  StatusHeatMap.js  StatusReplicationLevel.js  StatusUserQueries.js  StatusWorkers.js  ToolsSql.js
www/webfwk/css/: FwkApplicationControlApp.css  SimpleTable1.css  StatusReplicationLevel.css  test_fwk.css
www/webfwk/html/: test_simpletable.html
www/webfwk/js/: CSSLoader.js  Class.js  Fwk.js  FwkApplication.js  FwkApplicationControlApp.js  FwkTestApp.js  SimpleTable.js  SimpleTableTest.js  SimpleTableTestApp.js  StatusReplicationLevel.js  StatusWorkers.js  TestApp.js  Widget.js  (+1 more)
